# intersection_of_two_triangles

./: CMakeLists.txt  README.md  tests.txt
include/intersection_of_two_triangles/: exception.hpp
include/intersection_of_two_triangles/algorithms/: are_intersecting.hpp  are_nearly_equal.hpp  cross_product.hpp  determinant.hpp  dot_product.hpp
include/intersection_of_two_triangles/primitives/: general_triangle.hpp  line.hpp  plane.hpp  point.hpp  segment.hpp  triangle.hpp  vector.hpp
src/: main.cpp
src/algorithms/: are_intersecting.cpp  are_nearly_equal.cpp  cross_product.cpp  determinant.cpp  dot_product.cpp
src/primitives/: general_triangle.cpp  line.cpp  plane.cpp  point.cpp  segment.cpp  triangle.cpp  vector.cpp
